problem with functionality of capturing a button press

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         </section>
     </aside>
 
-    <section id="current-guess">
-        <input type="text" name="guess" value="guess" id="guess"/>
+    <section id="guess">
+        <input type="text" name="guess"  id="guess" placeholder="enter a letter"/>
         <button onclick="onSubmit()" type="submit">SUBMIT</button>
         <button type="reset">RESET</button>
     </section>
