--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
     </aside>
 
     <section id="guess">
+        <form id ="answer-field" onsubmit="event.preventDefault(); onSubmit();" onreset="resetButton()">
         <input type="text" name="guess"  id="guess" placeholder="enter a letter"/>
-        <button onclick="onSubmit()" type="submit">SUBMIT</button>
+        <button type="submit">SUBMIT</button>
         <button type="reset">RESET</button>
+        </form>
     </section>
 
     <script src="words.js"></script>
