fixed css and got the dashes to display on the DOM

--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
 
 <body onload="loadGame()">
     <section id="output">
-        This is the output that will show how far along the player is
+        <ul class="bananas">
+            <li class="letter hidden" id="letter-0">_</li>
+            <li class="letter hidden" id="letter-1">_</li>
+            <li class="letter hidden" id="letter-2">_</li>
+            <li class="letter hidden" id="letter-3">_</li>
+            <li class="letter hidden" id="letter-4">_</li>
+            <li class="letter hidden" id="letter-5">_</li>
+            <li class="letter hidden" id="letter-6">_</li>
+            <li class="letter hidden" id="letter-7">_</li>
+            <li class="letter hidden" id="letter-8">_</li>
+            <li class="letter hidden" id="letter-9">_</li>
+        </ul>
     </section>
 
     <section id="stage">
