--- a/index.html
+++ b/index.html
@@ -41,12 +41,13 @@
     </aside>
 
     <section id="guess">
-        <form id ="answer-field" onsubmit="event.preventDefault(); onSubmit();" onreset="resetButton()">
-        <input type="text" name="guess"  id="guess" placeholder="enter a letter"/>
-        <button type="submit">SUBMIT</button>
-        <button type="reset">RESET</button>
-        </form>
-    </section>
+    <form id="answer-field" onsubmit="event.preventDefault(); onSubmit();"  onreset="resetButton()" >
+            <input type="text" maxlength="1" name="guess"  id="guess" placeholder="enter a letter"/>
+            <button type="submit">SUBMIT</button>
+            <button type="reset">RESET</button>
+            </form>
+        
+     </section>
 
     <script src="words.js"></script>
     <script src="app.js"></script>
