added html guessed letters field and css styling for font size of that field

--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
         <section id="turns-total">
                 PLACE TOTAL NUMBER OF TURNS HERE
         </section>
-        <section id = "letters">
-                PLACE ALL LETTERS HERE
+
+        <section>
+                <h3>Guessed Letters</h3>
+                <p><i>Don't guess these letters again!</i></p>
+                <p id = "letters"></p>
         </section>
     </aside>
 
@@ -43,7 +46,6 @@
             <button type="submit">SUBMIT</button>
             <button type="reset">RESET</button>
             </form>
-        
      </section>
 
     <script src="words.js"></script>
