--- a/index.html
+++ b/index.html
@@ -9,44 +9,47 @@
 </head>
 
 <body onload="loadGame()">
-    <section id="output">
-        <ul class="bananas">
-            <li class="letter hidden" id="letter-0">_</li>
-            <li class="letter hidden" id="letter-1">_</li>
-            <li class="letter hidden" id="letter-2">_</li>
-            <li class="letter hidden" id="letter-3">_</li>
-            <li class="letter hidden" id="letter-4">_</li>
-            <li class="letter hidden" id="letter-5">_</li>
-            <li class="letter hidden" id="letter-6">_</li>
-            <li class="letter hidden" id="letter-7">_</li>
-            <li class="letter hidden" id="letter-8">_</li>
-            <li class="letter hidden" id="letter-9">_</li>
-        </ul>
-    </section>
+    <header>
+        <h1>Guess or Die Game!</h1>
+    </header>
+    <main>
 
-    <section id="stage">
-        This is where the stage will go to show player progress
-    </section>
+        <section id="output">
+            <ul class="bananas">
+                <li class="letter hidden" id="letter-0">_</li>
+                <li class="letter hidden" id="letter-1">_</li>
+                <li class="letter hidden" id="letter-2">_</li>
+                <li class="letter hidden" id="letter-3">_</li>
+                <li class="letter hidden" id="letter-4">_</li>
+                <li class="letter hidden" id="letter-5">_</li>
+                <li class="letter hidden" id="letter-6">_</li>
+                <li class="letter hidden" id="letter-7">_</li>
+                <li class="letter hidden" id="letter-8">_</li>
+                <li class="letter hidden" id="letter-9">_</li>
+            </ul>
+        </section>
 
-    <aside id="heads-up-display">
+        <section id="guess">
+        <form id="answer-field" onsubmit="event.preventDefault(); onSubmit();"  onreset="resetButton()" >
+                <input type="text" maxlength="1" name="guess"  id="guess" placeholder="enter a letter"/>
+                <button type="submit">SUBMIT</button>
+                <button type="reset">RESET</button>
+                </form>
+        </section>
+        
+        <section id="stage">
+            This is where the stage will go to show player progress
+        </section>
         <section id="turns-total">
                 PLACE TOTAL NUMBER OF TURNS HERE
         </section>
 
         <section>
                 <h3>Guessed Letters</h3>
-                <p><i>Don't guess these letters again!</i></p>
                 <p id = "letters"></p>
         </section>
-    </aside>
 
-    <section id="guess">
-    <form id="answer-field" onsubmit="event.preventDefault(); onSubmit();"  onreset="resetButton()" >
-            <input type="text" maxlength="1" name="guess"  id="guess" placeholder="enter a letter"/>
-            <button type="submit">SUBMIT</button>
-            <button type="reset">RESET</button>
-            </form>
-     </section>
+    </main>
 
     <script src="words.js"></script>
     <script src="app.js"></script>
